# deeplearning

./: .envrc  .gitignore  DeepLearningRepo.code-workspace  Export YOLO.ipynb  Feature Extraction.ipynb  Final Modelling.ipynb  Initial Modelling v2.ipynb  Modelling.ipynb  Preprocessing v2.ipynb  Preprocessing v3.ipynb  Preprocessing.ipynb  Preprocessing.old.ipynb  README.md  all_in_one.db  avocado_only.db  banana_only.db  createDerivation.py  deep_learning.db  feature_based_model.pth  filtered_result.csv  final_features.txt  final_variation.txt  flake.nix  model_architecture  model_metadata.json  model_server.py  modeldef.py  modeldef2.py  modeldef3.py  modeldef4.py  requirements.txt  step1.txt
.stfolder/: syncthing-folder-275deb.txt
eda_reports/filtered/: pixel_stats.txt
scrapylab/: .gitignore
scrapylab/BIS/: main.py
scrapylab/GIS2/: main.py
scrapylab/GIS3/: main.py
sub/foodApp/: package.json  svelte.config.js
sub/foodApp/src/lib/: chartManager.svelte.ts  connectionManager.svelte.ts  connectionManager.ts  globalContext.ts  state.svelte.ts
sub/foodApp/src/navbar/: navbar.svelte  style.css
sub/foodApp/src/routes/: +layout.svelte  +page.svelte  +page.ts  additional.css  layout.css  mainpage.css
sub/paralells/: .gitignore  Cargo.toml  result.csv
sub/paralells/src/: main.rs
x2/: all_in_one.db  avocado_only.db  banana_only.db
