[package]
name = "paralells"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
image = "0.25.8"
rayon = "1.11.0"
walkdir = "2.5.0"
regex = "1"
once_cell = "1"
md5 = "0.8.0"
hex = "0.4.3" # Add the hex crate
csv = "1.3.1"
http = "1.3.1"
reqwest = { version= "0.12.23" , features = ["blocking"]}
serde = "1.0.228"

[dependencies.uuid]
version = "1.18.1"
# Lets you generate random UUIDs
features = [
    "v4",
]
